<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"

    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.auth.RegisterActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/hola"
        android:textColor="#D5D6DB"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarRegister" />

    <TextView
        android:id="@+id/SignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/roboto"
        android:text="@string/welcome_register"
        android:textAllCaps="false"
        android:textColor="#D5D6DB"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />


    <ImageView
        android:id="@+id/imgRegister"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SignUp"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/imgRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.747"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_plus" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgRegister"
        app:srcCompat="@drawable/ic_userlogin" />


    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView7"
        app:layout_constraintStart_toEndOf="@+id/imageView7"
        app:layout_constraintTop_toTopOf="@+id/imageView7"
        app:srcCompat="@drawable/ic_next" />

    <EditText
        android:id="@+id/registerUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:background="@null"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textColor="#D5D6DB"
        android:textColorHint="#80D5D6DB"
        app:layout_constraintBottom_toBottomOf="@+id/imageView7"
        app:layout_constraintStart_toEndOf="@+id/imageView13"
        app:layout_constraintTop_toTopOf="@+id/imageView7" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="0dp"
        android:layout_height="0.5dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/imageView7"
        app:layout_constraintTop_toBottomOf="@+id/imageView7"
        app:srcCompat="@drawable/rectangle_gris" />

    <ImageView
        android:id="@+id/buttonImgFalse"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"

        app:layout_constraintStart_toStartOf="@+id/imageView7"
        app:layout_constraintTop_toBottomOf="@+id/imageView15"
        app:srcCompat="@drawable/ic_userlogin" />


    <ImageView
        android:id="@+id/imageView22"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/buttonImgFalse"
        app:layout_constraintStart_toEndOf="@+id/buttonImgFalse"
        app:layout_constraintTop_toTopOf="@+id/buttonImgFalse"
        app:srcCompat="@drawable/ic_next" />

    <EditText
        android:id="@+id/registerFullname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:background="@null"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:hint="@string/fullname"
        android:inputType="textPersonName"
        android:textColor="#D5D6DB"
        android:textColorHint="#80D5D6DB"
        app:layout_constraintBottom_toBottomOf="@+id/buttonImgFalse"
        app:layout_constraintStart_toEndOf="@+id/imageView22"
        app:layout_constraintTop_toTopOf="@+id/buttonImgFalse" />

    <ImageView
        android:id="@+id/imageView23"
        android:layout_width="0dp"
        android:layout_height="0.5dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/buttonImgFalse"
        app:layout_constraintTop_toBottomOf="@+id/buttonImgFalse"
        app:srcCompat="@drawable/rectangle_gris" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@+id/imageView7"
        app:layout_constraintTop_toBottomOf="@+id/imageView23"
        app:srcCompat="@drawable/ic_locklogin" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView12"
        app:layout_constraintStart_toEndOf="@+id/imageView12"
        app:layout_constraintTop_toTopOf="@+id/imageView12"
        app:srcCompat="@drawable/ic_next" />



    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="0dp"
        android:layout_height="0.5dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/imageView15"
        app:layout_constraintStart_toStartOf="@+id/imageView12"
        app:layout_constraintTop_toBottomOf="@+id/imageView12"
        app:srcCompat="@drawable/rectangle_gris" />


    <EditText
        android:id="@+id/registerPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:background="@null"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="#D5D6DB"
        android:textColorHint="#80D5D6DB"
        app:layout_constraintBottom_toBottomOf="@+id/imageView12"
        app:layout_constraintStart_toEndOf="@+id/imageView14"
        app:layout_constraintTop_toTopOf="@+id/imageView12" />

    <ImageView
        android:id="@+id/imageView24"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@+id/imageView7"
        app:layout_constraintTop_toBottomOf="@+id/imageView16"
        app:srcCompat="@drawable/ic_locklogin" />

    <ImageView
        android:id="@+id/imageView25"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView24"
        app:layout_constraintStart_toEndOf="@+id/imageView24"
        app:layout_constraintTop_toTopOf="@+id/imageView24"
        app:srcCompat="@drawable/ic_next" />



    <ImageView
        android:id="@+id/imageView26"
        android:layout_width="0dp"
        android:layout_height="0.5dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/imageView15"
        app:layout_constraintStart_toStartOf="@+id/imageView24"
        app:layout_constraintTop_toBottomOf="@+id/imageView24"
        app:srcCompat="@drawable/rectangle_gris" />


    <EditText
        android:id="@+id/registerConfirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:background="@null"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textColor="#D5D6DB"
        android:textColorHint="#80D5D6DB"
        app:layout_constraintBottom_toBottomOf="@+id/imageView24"
        app:layout_constraintStart_toEndOf="@+id/imageView25"
        app:layout_constraintTop_toTopOf="@+id/imageView24" />

    <ImageView
        android:id="@+id/imageButtonRegister"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="@+id/imageView26"
        app:layout_constraintStart_toStartOf="@+id/imageView26"
        app:layout_constraintTop_toBottomOf="@+id/imageView26"
        app:srcCompat="@drawable/rectangle_button" />

    <ImageView
        android:id="@+id/lineaEnButton"
        android:layout_width="0dp"
        android:layout_height="5dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@id/imageButtonRegister"
        app:layout_constraintEnd_toStartOf="@id/textSignUp"
        app:layout_constraintStart_toStartOf="@id/imageButtonRegister"
        app:layout_constraintTop_toTopOf="@id/imageButtonRegister"
        app:srcCompat="@drawable/rectangle_white" />

    <TextView
        android:id="@+id/textSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:layout_marginEnd="16dp"
        android:text="@string/registrate"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@id/imageButtonRegister"
        app:layout_constraintEnd_toEndOf="@id/imageButtonRegister"
        app:layout_constraintTop_toTopOf="@id/imageButtonRegister" />

    <ProgressBar
        android:id="@+id/progressBarRegister"
        style="?android:attr/progressBarStyle"
        android:layout_width="35dp"
        android:layout_height="38dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/imageButtonRegister"
        app:layout_constraintEnd_toEndOf="@id/imageButtonRegister"
        app:layout_constraintStart_toStartOf="@id/imageButtonRegister"
        app:layout_constraintTop_toTopOf="@id/imageButtonRegister" />
</androidx.constraintlayout.widget.ConstraintLayout>