<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/roboto"
                android:text="@string/finalizado"
                android:textColor="@android:color/white"
                android:textSize="21sp"
                app:layout_constraintEnd_toEndOf="@+id/buttonFinalizarQuiz"
                app:layout_constraintStart_toStartOf="@+id/buttonFinalizarQuiz"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/tu_resultado"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="@+id/buttonFinalizarQuiz"
                app:layout_constraintStart_toStartOf="@+id/buttonFinalizarQuiz"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="@+id/buttonFinalizarQuiz"
                app:layout_constraintStart_toStartOf="@+id/buttonFinalizarQuiz"
                app:layout_constraintTop_toBottomOf="@id/textView5">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimaryDark">

                    <ImageView
                        android:id="@+id/imgPerfilResult"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginTop="24dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:srcCompat="@tools:sample/avatars" />

                    <TextView
                        android:id="@+id/usernameResult"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/roboto"
                        android:text="Alicia"
                        android:textColor="@color/colorBlanco"
                        android:textSize="24sp"
                        app:layout_constraintEnd_toEndOf="@+id/imgPerfilResult"
                        app:layout_constraintStart_toStartOf="@+id/imgPerfilResult"
                        app:layout_constraintTop_toBottomOf="@+id/imgPerfilResult" />

                    <TextView
                        android:id="@+id/puntuacionResult"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="24dp"
                        android:fontFamily="@font/roboto_medium"
                        android:text="28"
                        android:textColor="@color/colorBlanco"
                        android:textSize="28sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/imageView19"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintHorizontal_chainStyle="packed"
                        app:layout_constraintStart_toStartOf="@+id/usernameResult"
                        app:layout_constraintTop_toBottomOf="@+id/usernameResult" />

                    <ImageView
                        android:id="@+id/imageView19"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        app:layout_constraintBottom_toBottomOf="@+id/puntuacionResult"
                        app:layout_constraintEnd_toEndOf="@+id/usernameResult"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/puntuacionResult"
                        app:layout_constraintTop_toTopOf="@+id/puntuacionResult"
                        app:srcCompat="@drawable/ic_starcircular" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/buttonFinalizarQuiz"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="24dp"
                android:text="@string/button_finalizar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>